[gd_scene load_steps=17 format=3 uid="uid://cxkdfyd1c2830"]

[ext_resource type="FontFile" uid="uid://1rq226utyls8" path="res://Assets/fonts/Perfect DOS VGA 437.ttf" id="1_8xipq"]
[ext_resource type="PackedScene" uid="uid://8fo2a0st80mp" path="res://Scenes/DragCaptcha/drag_object.tscn" id="1_aw0ry"]
[ext_resource type="Script" uid="uid://bu4xg5ocipitx" path="res://Scenes/DragCaptcha/drag_captcha_manager.gd" id="1_qtw4p"]
[ext_resource type="PackedScene" uid="uid://cvvpacs2wctdm" path="res://Scenes/stopwatch.tscn" id="1_x2idx"]
[ext_resource type="PackedScene" uid="uid://cfhyfrh2hqpq1" path="res://Scenes/DragCaptcha/end_zone.tscn" id="2_om4t1"]
[ext_resource type="PackedScene" uid="uid://c5fltol0bt0kt" path="res://Scenes/Captcha_HUD.tscn" id="4_x2idx"]
[ext_resource type="Texture2D" uid="uid://2rrodn8fer1k" path="res://Assets/UI/OneNrm.png" id="5_630ia"]
[ext_resource type="FontFile" uid="uid://x6ycq81brgpn" path="res://Assets/fonts/MS Sans Serif Bold.ttf" id="6_pgd5l"]
[ext_resource type="Texture2D" uid="uid://b0u75qiilbe21" path="res://Assets/UI/TwoNrm.png" id="6_qtw4p"]
[ext_resource type="Script" uid="uid://dn5cedxaluibv" path="res://Scripts/Drag Captcha/VerifyBtn.gd" id="7_38ltn"]
[ext_resource type="AudioStream" uid="uid://cevnxp2sxx7ua" path="res://Assets/sounds/UI_Hover.wav" id="8_0grj4"]
[ext_resource type="AudioStream" uid="uid://ksxru857b703" path="res://Assets/sounds/UI_Click.wav" id="9_jhrle"]
[ext_resource type="PackedScene" uid="uid://b7psrdysw4hr7" path="res://Scenes/win_screen.tscn" id="10_8ug5q"]
[ext_resource type="AudioStream" uid="uid://beqs24vi8ugoi" path="res://Assets/sounds/coin.wav" id="10_ghc7r"]
[ext_resource type="AudioStream" uid="uid://d1m1x1mxs0y4e" path="res://Assets/sounds/hurt.wav" id="11_kew74"]
[ext_resource type="PackedScene" uid="uid://bcgkb3d1ye1t3" path="res://Scenes/lose_screen.tscn" id="11_of7bc"]

[node name="DragCaptcha" type="Node2D"]
script = ExtResource("1_qtw4p")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 768.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.298547, 0.370309, 0.483037, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 118.0
offset_bottom = 223.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("1_8xipq")
theme_override_font_sizes/font_size = 63
text = "Drag all 1's to the box"
horizontal_alignment = 1
vertical_alignment = 1

[node name="End_Zone" parent="." instance=ExtResource("2_om4t1")]
position = Vector2(529, 401)

[node name="DragObject" parent="." groups=["Ones"] instance=ExtResource("1_aw0ry")]
position = Vector2(183, 383)
scale = Vector2(0.8, 0.8)

[node name="Sprite2D" type="Sprite2D" parent="DragObject"]
scale = Vector2(10, 10)
texture = ExtResource("5_630ia")

[node name="DragObject2" parent="." groups=["Ones"] instance=ExtResource("1_aw0ry")]
position = Vector2(907, 325)
scale = Vector2(0.8, 0.8)

[node name="Sprite2D" type="Sprite2D" parent="DragObject2"]
position = Vector2(0, 2.38419e-07)
scale = Vector2(10, 10.156)
texture = ExtResource("5_630ia")

[node name="DragObject3" parent="." groups=["Ones"] instance=ExtResource("1_aw0ry")]
position = Vector2(408, 603)
scale = Vector2(0.8, 0.8)

[node name="Sprite2D" type="Sprite2D" parent="DragObject3"]
position = Vector2(0, 2.38419e-07)
scale = Vector2(10, 10.156)
texture = ExtResource("5_630ia")

[node name="DragObject4" parent="." groups=["Twos"] instance=ExtResource("1_aw0ry")]
position = Vector2(641, 619)
scale = Vector2(0.8, 0.8)

[node name="Sprite2D" type="Sprite2D" parent="DragObject4"]
position = Vector2(0, 2.38419e-07)
scale = Vector2(10, 10.156)
texture = ExtResource("6_qtw4p")

[node name="DragObject5" parent="." groups=["Twos"] instance=ExtResource("1_aw0ry")]
position = Vector2(827, 517)
scale = Vector2(0.8, 0.8)

[node name="Sprite2D" type="Sprite2D" parent="DragObject5"]
position = Vector2(0, 2.38419e-07)
scale = Vector2(10, 10.156)
texture = ExtResource("6_qtw4p")

[node name="DragObject6" parent="." groups=["Twos"] instance=ExtResource("1_aw0ry")]
position = Vector2(179, 582)
scale = Vector2(0.8, 0.8)

[node name="Sprite2D" type="Sprite2D" parent="DragObject6"]
position = Vector2(0, 2.38419e-07)
scale = Vector2(10, 10.156)
texture = ExtResource("6_qtw4p")

[node name="Stopwatch" parent="." instance=ExtResource("1_x2idx")]

[node name="HUD" parent="." instance=ExtResource("4_x2idx")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = 512.0
offset_top = 35.0
offset_right = 512.0
offset_bottom = 35.0
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="Button" type="Button" parent="."]
offset_left = 804.0
offset_top = 656.0
offset_right = 974.0
offset_bottom = 724.0
theme_override_fonts/font = ExtResource("6_pgd5l")
theme_override_font_sizes/font_size = 54
text = "Verify"
script = ExtResource("7_38ltn")

[node name="WinScreen" parent="." instance=ExtResource("10_8ug5q")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 512.0
offset_top = 384.0
offset_right = 512.0
offset_bottom = 384.0
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 2

[node name="LoseScreen" parent="." instance=ExtResource("11_of7bc")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 512.0
offset_top = 384.0
offset_right = 512.0
offset_bottom = 384.0
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 2

[node name="SFX Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0grj4")

[node name="SFX Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_jhrle")

[node name="SFX Success" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ghc7r")

[node name="SFX Failure" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_kew74")

[connection signal="mouse_entered" from="Button" to="End_Zone" method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
